Se corrige el metodo tolist